<resources>
    <string name="app_name">JDKvsNDK</string>
    <string name="outputjava">Output Java</string>
    <string name="outputcpp">Output C++</string>
    <string name="buttonGo">GO</string>
    <string name="buttonStop">STOP</string>
    <string name="cpu">CPU Bound</string>
    <string name="memory">Memory Bound</string>
    <string name="fib">Fibonacci</string>
    <string name="cas">Numeri Casuali</string>
    <string name="mat">Prodotto Matriciale</string>
    <string name="prim">Primality Test</string>
    <string name="ack">Ackermann</string>
    <string name="loop">NestedLoops</string>
    <string name="era">Crivello di Eratostene</string>
    <string name="strcat">Strcat</string>
    <string name="fibd">F[n] = 0 se n = 0\nF[n] = 1 se n = 1\nF[n] = F[n-1] + F[n-2] altrimenti\nInserire un numero n non troppo alto</string>
    <string name="casd">Genera n (input dell\'utente) moltiplicato per 10^6 numeri casuali usando l\'algoritmo "linear congruential generator".\nNon dovrebbe dare problemi di crash applicativo\n </string>
    <string name="matd">Crea e moltiplica tra di loro due matrici quadrate di ordine n (input dell\'utente) \nAbbiamo messo come limite massimo 1000 anche se non dovrebbe dare problemi di crash.\n</string>
    <string name="primd">Verifica che un numero prefissato di n cifre sia primo.\nInput: n &gt; 0 &amp; n &lt; 20</string>
    <string name="ackd">A[m, n] = n + 1 se m = 0\nA[m, n] = A[m - 1,1] se m > 0 e n = 0\nA[m, n] = A[m - 1, A[m, n - 1]] se m, n > 0\nInput: m &gt;= 0 &amp; m &lt;= 4; n &gt;= 0 &amp; n &lt;= 9\nSe m = 4 è tollerato solo n = 0\nNonostante l\'input limitato l\'algoritmo potrebbe crashare lo stesso.</string>
    <string name="loopd">Esegue sei cicli for annidati da 0 a n. \nCon n input dell\'utente.\nNon ci sono limiti di input.\n</string>
    <string name="arad">Calcola tutti i numeri primi tra 2 e 10^n.\nInput: un intero n &lt; 9.</string>
    <string name="strcatd">Concatena n * 1000 stringhe formate da un carattere.\nInput: un intero n qualsialsi.</string>
    <string name="resjava">Algoritmo Java: </string>
    <string name="resc">Algoritmo C: </string>
    <string name="unita">(ms)</string>
    <string name="buttonPlot">Plotta</string>
    <string name="toastPlot">Min input diversi per plottare = 5</string>
    <string name="Input">Input</string>
    <string name="TitoloGrafico">Titolo Grafico</string>
    <string name="java">Java</string>
    <string name="c">C</string>
    <string name="titoloalg">Titolo</string>
    <string name="descalg">Descrizione algoritmo</string>
    <string name="tipoalg">Tipo algoritmo</string>
    <string name="primaparte">Last Time(ms) c:</string>
    <string name="secondaparte">java:</string>
    <string name="terzaparte">Input:</string>
    <string name="zero">0</string>
    <string name="canc">Algoritmo stoppato!</string>
    <string name="invalid">Input non valido!</string>
    <string name="primeinfo">Test su </string>
    <string name="notimpl">Algoritmo non implementato!</string>
</resources>