<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="javacpp.cmr.com.sdkvsndk.MainActivity"
    android:weightSum="12">


    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="Descrizione Algoritmo"
        android:textAlignment="center"
        android:gravity="center"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center">

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonGo" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonStop" />

        <Button
            android:id="@+id/buttonPlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPlot" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <TextView
        android:id="@+id/resultsjava"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_weight="2"
        android:text="@string/outputjava"
        android:gravity="center"/>

    <TextView
        android:id="@+id/resultscpp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/outputcpp"
        android:textAlignment="center" />


</LinearLayout>
